test/fail/match_type01.v3
//@parse
def m() {
	match (x) {
		type V: X();
		type V: X();
		type V: X();
		type V: X();
		type V: X();
	}
}